--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
       <!-- Navbar -->
       <nav class="navbar">
         <h1 class="medipluslogo ">Mediplus</h1>
+        <!-- mobileonlypart -->
         <div class="mobileonlyhor menuicon">
           <p class="mobileonlyhor"><i class="fas fa-bars mobileonlyhor colorwhite"></i> MENU</p>
         </div>
-
+        <!-- web part  -->
         <ul class="navlinks">
           <li> <a href="#"> Home</a></li>
           <li> <a href="#"> About</a></li>
@@ -150,8 +151,8 @@
           <p> We can manage your dream building A small river named Duden flows by their place</p>
           <button class="findplacesbutton">Search Places</button>
         </div>
-      </div>
-    </div>  
+    </div>
+    <!-- </div>   -->
 
 
     <!-- Mobile only DEPARTMENTS part -->
